force-app/main/default/objects/Education__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <inlineHelpText>Name of the Certificate completed as appeared on the document.</inlineHelpText>
    <label>Certification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>