force-app/main/default/objects/Education__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT( University__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the name of the country where the Institute of Degree is located. Select via Lookup.</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>