force-app/main/default/objects/Education__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the Degree relevant to the Qualification Level selected above</inlineHelpText>
    <label>Degree</label>
    <referenceTo>Degree__c</referenceTo>
    <relationshipLabel>Education Records</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>