force-app/main/default/objects/Education__c/fields/EndYear__c.field-meta.xml
<CustomField>
    <fullName>EndYear__c</fullName>
    <inlineHelpText>Year when this Degree/Diploma certificate was completed.</inlineHelpText>
    <label>End Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>