force-app/main/default/objects/Education__c/fields/Fieldsofstudy__c.field-meta.xml
<CustomField>
    <fullName>Fieldsofstudy__c</fullName>
    <inlineHelpText>Enter the Field(s) in which the study has been completed by this Contact.</inlineHelpText>
    <label>Field(s) of study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>