force-app/main/default/objects/Education__c/fields/IssuanceDate__c.field-meta.xml
<CustomField>
    <fullName>IssuanceDate__c</fullName>
    <inlineHelpText>Does this certificate/degree or education has an expiry date? If yes, mention the same, else leave blank</inlineHelpText>
    <label>Issuance Date</label>
    <type>Date</type>
</CustomField>