force-app/main/default/objects/Education__c/fields/LinktoThesis__c.field-meta.xml
<CustomField>
    <fullName>LinktoThesis__c</fullName>
    <inlineHelpText>Enter the URL or the link to the completed Thesis if the same has been uploaded online.</inlineHelpText>
    <label>Link to Thesis</label>
    <type>Url</type>
</CustomField>