force-app/main/default/objects/Education__c/fields/Major_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Major_Concentration__c</fullName>
    <inlineHelpText>Add the subject in which the Contact had their Major</inlineHelpText>
    <label>Major/Concentration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>