force-app/main/default/objects/Education__c/fields/Qualification_Level__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Level__c</fullName>
    <inlineHelpText>Select what Level of Qualification it is. Pick one from the list.</inlineHelpText>
    <label>Qualification Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Master&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Doctoral degree</fullName>
            </value>
            <value>
                <fullName>Professional degree</fullName>
            </value>
            <value>
                <fullName>Non-degree certification</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;&apos;s degree</fullName>
                <isActive>false</isActive>
                <label>Bachelor&apos;&apos;s degree</label>
            </value>
            <value>
                <fullName>Master&apos;&apos;s degree</fullName>
                <isActive>false</isActive>
                <label>Master&apos;&apos;s degree</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>