force-app/main/default/objects/Education__c/fields/SchoolwithinInstitution__c.field-meta.xml
<CustomField>
    <fullName>SchoolwithinInstitution__c</fullName>
    <inlineHelpText>(e.g. McIntire School of Commerce (UVA), Robins School of Business (Richmond), The Wharton School)</inlineHelpText>
    <label>School within Institution</label>
    <type>TextArea</type>
</CustomField>