force-app/main/default/objects/Education__c/fields/StartYear__c.field-meta.xml
<CustomField>
    <fullName>StartYear__c</fullName>
    <inlineHelpText>Year when this Degree/Diploma certificate was started.</inlineHelpText>
    <label>Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>