force-app/main/default/objects/Education__c/fields/ThesisName__c.field-meta.xml
<CustomField>
    <fullName>ThesisName__c</fullName>
    <inlineHelpText>Enter the name of the Thesis if this has been completed.</inlineHelpText>
    <label>Thesis Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>