force-app/main/default/objects/Education__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Select what type of Education it is. Pick one from the list.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Additional Pre-Collegiate Education</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Masters Degree</fullName>
            </value>
            <value>
                <fullName>Degree #1</fullName>
                <isActive>false</isActive>
                <label>Degree #1</label>
            </value>
            <value>
                <fullName>Degree #2</fullName>
                <isActive>false</isActive>
                <label>Degree #2</label>
            </value>
            <value>
                <fullName>Degree #3</fullName>
                <isActive>false</isActive>
                <label>Degree #3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>