force-app/main/default/objects/Education__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the University where this Education was completed. Pick via Lookup.</inlineHelpText>
    <label>University</label>
    <referenceTo>Universities__c</referenceTo>
    <relationshipLabel>Education Records</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <type>Lookup</type>
</CustomField>